--- a/site/frontend/src/assets/css/blocks/interface.asset.css
+++ b/site/frontend/src/assets/css/blocks/interface.asset.css
@@ -3,3 +3,12 @@
     height: 65%;
     width: 100%;
 }
+
+
+.modele-node
+{
+    border-radius: 5px;
+    background-color: var(--bg-color);
+    border: 2px solid white;
+    color: white;
+}
