--- a/site/frontend/src/assets/css/global.asset.css
+++ b/site/frontend/src/assets/css/global.asset.css
@@ -48,4 +48,5 @@ h1, h2, h3, h4, h5, p, input
 .f-align-start {align-items: flex-start;}
 .f-align-end {align-items: flex-end;}
 .f-align-center {align-items: center;}
+.f-wrap { flex-wrap: wrap;}
 
