--- a/site/frontend/src/assets/css/global.asset.css
+++ b/site/frontend/src/assets/css/global.asset.css
@@ -2,6 +2,8 @@ html
 {
     --bg-color : #0e1117;
     --tx-color: #FFFFFF;
+    --text-color: rgba(255, 255, 255, 1);
+    --glow-color: rgba(255, 255, 255, .4);
     background: var(--bg-color);
     color: var(--tx-color);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -24,12 +26,22 @@ html, body
     width: 100%;
 }
 
-h1, h2, h3, h4, h5, p, input
+p, input
 {
     /* all: unset;  */
     margin: 0; 
     padding: 0;
     /* font-family: 'Loos Extended'; */
+}
+
+h1, h2, h3, h4, h5
+{
+    margin: 0; 
+    padding: 0;
+    color: var(--text-color);
+    font-weight: bold;
+    text-transform: capitalize;
+    text-shadow: 1px 1px 2px var(--glow-color), -1px -1px 2px var(--glow-color);
 }
 
 .f { display: flex;}
