--- a/site/frontend/src/assets/css/nodes/modele.asset.css
+++ b/site/frontend/src/assets/css/nodes/modele.asset.css
@@ -2,12 +2,16 @@
 {
   stroke: white !important;
 }
-
+.node-modele
+{
+  border: 2px solid rgba(122, 0, 0, 1);
+  box-shadow: 0 3px 5px rgba(255, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+}
 .modele-node, .fonction-node, .parameter-node
 {
     border-radius: 5px;
     background-color: rgba(14, 17, 23, 1);
-    /* border: 2px solid white; */
     color: white;
 }
 
@@ -18,19 +22,15 @@
   height: 100%;
   font-weight: bold;
   margin-bottom: 5px;
-  background-color: rgba(81, 0, 0, 0.7);
-  border: 2px solid rgba(81, 0, 0, 0.7);
+  background-color: rgba(81, 0, 0, 1);
+  box-shadow: 0 2px 4px rgba(255, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
 }
 
-.node-modele-separator, .node-fonction-separator, .node-parameter-separator
-{
-  /* height: 2px; */
-  background: white;
-}
+
 
 .node-modele-args, .node-fonction-args, .node-parameter-args
 {
-  border: 2px solid rgba(81, 0, 0, 0.7);
   border-top: 0px;
   gap: 3em;
 
@@ -70,16 +70,22 @@
 
 /*----------------------- Fonction Node -----------------------*/
 
+.node-fonction
+{
+  border: 2px solid rgba(0, 122, 11, 1);
+  box-shadow: 0 3px 5px rgba(0, 255, 0, 0.2);
+  backdrop-filter: blur(10px);
 
+}
 .node-fonction-header
 {
-  background-color: rgba(0, 81, 11, 0.7);
-  border: 2px solid rgba(0, 81, 11, 0.7);
+  background-color: rgba(0, 81, 11, 1);
+  box-shadow: 0 2px 4px rgba(0, 255, 0, 0.2);
+  backdrop-filter: blur(10px);
 }
 
 .node-fonction-args 
 {
-  border: 2px solid rgba(0, 81, 11, 0.7);
   border-top: 0px;
 }
 
@@ -89,15 +95,100 @@
 
 /*----------------------- Parameter Node -----------------------*/
 
+.node-parameter
+{
+  border: 2px solid rgba(0, 2, 133, 1);
+  box-shadow: 0 3px 5px rgba(0, 0, 255, 0.2);
+  backdrop-filter: blur(10px);
+}
 
 .node-parameter-header 
 {
-  background-color: rgba(0, 1, 81, 0.7);
-  border: 2px solid rgba(0, 1, 81, 0.7);
+  background-color: rgba(0, 2, 133, 1);
+  box-shadow: 0 3px 5px rgba(0, 0, 255, 0.2);
+  backdrop-filter: blur(10px);
+  border: 0;
 }
 
 .node-parameter-args
 {
-  border: 2px solid rgba(0, 1, 81, 0.7);
+  border: 0;
   border-top: 0px;
+}
+
+.node-parameter-button 
+{
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+.node-parameter-button button 
+{
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgba(0, 2, 133, 1);
+  color: white;
+  cursor: pointer;
+}
+
+.node-parameter-button button:hover 
+{
+  background-color: rgb(2, 5, 195);
+}
+
+/* .node-parameter-slider 
+{
+  margin-top: 10px;
+} */
+
+.slider 
+{
+  -webkit-appearance :none;
+  -moz-appearance :none;
+  appearance :none;
+  background: none;
+  cursor: pointer;
+  overflow: hidden;
+  margin: 10px 0;
+  height: 20px;
+  border-radius: 5px; 
+}
+
+.slider:focus-visible,
+.slider:hover{
+  --p: 25%;
+}
+
+.slider::-webkit-slider-thumb
+{
+  height: 20px;
+  width: 5px;
+  border-radius: 10px;
+  background: rgb(2, 5, 195);
+  border-image: linear-gradient(90deg,rgba(2, 5, 195, 1)50%, white 0) 0 1/calc(50% - 4px/2) 100vw/0 100vw;
+  -webkit-appearance: none;
+  appearance: none;
+  transition: .3s;
+}
+
+.slider-value 
+{
+  text-align: center;
+  margin-bottom: 5px;
+  font-size: 0.9em;
+}
+
+.node-textbox-input-container 
+{
+  margin-bottom: 10px;
+}
+
+.textbox 
+{
+  width: 60%;
+  height: 15px;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
