--- a/site/frontend/src/assets/css/nodes/modele.asset.css
+++ b/site/frontend/src/assets/css/nodes/modele.asset.css
@@ -174,6 +174,31 @@
   transition: .3s;
 }
 
+.slider-control
+{
+  gap: 1em;
+  transition: transform 0.3s ease;
+
+}
+
+.slider-button
+{
+  height: 25px;
+  width: 25px;
+  border-radius: 5px;
+  border: 2px solid rgba(0, 2, 160, 1);
+  box-shadow: 0 3px 5px rgba(0, 2, 160, 0.2);
+  backdrop-filter: blur(10px);
+  background: rgba(0, 2, 160, 1);
+  color: white;
+  cursor: pointer;
+}
+
+.slider-button:hover
+{
+  transform: scale(0.95);
+}
+
 .slider-value 
 {
   text-align: center;
@@ -211,6 +236,7 @@
   background: rgba(0, 2, 160, 1);
   color: white;
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
 .node-parameter-order:hover
